# tiddy

./: Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  release.yml
src/: app.rs  cli.rs  main.rs  popup.rs  ui.rs  words.rs
src/popup/: mod.rs
words/: english_10k.json
