[package]
name = "tiddy"
version = "0.1.1"
edition = "2021"
rust-version = "1.70"
authors = ["Bhargav Annem"]
description = "A minimal typing test in the terminal"
license = "MIT"
repository = "https://github.com/0xWOLAND/tiddy"
keywords = ["typing", "test", "terminal", "cli", "tui"]
categories = ["command-line-utilities", "games"]

[lints.clippy]
all = "deny"

[dependencies]
ratatui = "0.23"
crossterm = "0.27"
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
dirs = "6.0.0"
